fix list style on Firefox

--- a/app/components/Nav/index.css
+++ b/app/components/Nav/index.css
@@ -5,6 +5,9 @@
 .sg-nav {
   list-style: none;
 }
+.sg-nav li {
+  list-style: none;
+}
 
 .sg-nav-link {
   display: block;
